<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/frameLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <Switch
                android:id="@+id/profile_enable_changes_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_enable_data_changes"
                android:textAlignment="center" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <EditText
                    android:id="@+id/profile_surname_text"
                    android:layout_width="119dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:autofillHints=""
                    android:ems="10"
                    android:hint="@string/user_surname"
                    android:imeActionLabel="Done"
                    android:selectAllOnFocus="false"
                    android:singleLine="true"
                    android:textAlignment="textEnd" />

                <Space
                    style="100dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="10" />

                <EditText
                    android:id="@+id/profile_firstname_text"
                    android:layout_width="125dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="10"
                    android:ems="10"
                    android:hint="@string/user_firstname"
                    android:imeActionLabel="Done"
                    android:selectAllOnFocus="false"
                    android:singleLine="true" />

            </TableRow>

            <ImageView
                android:id="@+id/profile_user_photo"
                android:layout_width="150dp"
                android:layout_height="150dp"
                tools:srcCompat="@tools:sample/avatars" />

            <ProgressBar
                android:id="@+id/progressBarProfile"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:visibility="gone" />

            <EditText
                android:id="@+id/profile_email_text"
                android:layout_width="340dp"
                android:layout_height="match_parent"
                android:autofillHints=""
                android:ems="10"
                android:hint="Email"
                android:imeActionLabel="Done"
                android:selectAllOnFocus="false"
                android:singleLine="true"
                android:textAlignment="center" />

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="69dp"
                android:gravity="center">

                <Button
                    android:id="@+id/profile_sign_out_button"
                    android:layout_width="168dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/button_sign_out" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/profile_delete_profile_button"
                    android:layout_width="201dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0"
                    android:text="@string/button_delete_profile" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/profile_change_photo"
                    android:layout_width="173dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_select_photo" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center">

                <Button
                    android:id="@+id/profile_update_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    android:text="@string/button_validate_update" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/profile_email_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email_checked_no" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/profile_carteid_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cardid_checked_no" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/profile_telephone_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/telephone_checked_no" />
            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <CheckBox
                    android:id="@+id/profile_photo_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/photo_checked_no" />

            </TableRow>
        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.25"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- Main content -->

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/bottom_navigation_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@color/colorWhite"
            app:itemIconTint="@color/colorWaitingIconNavBar"
            app:itemTextColor="@color/colorWaitingIconNavBar"
            app:menu="@menu/bottom_navigation_bar" />

    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>